# EEW_Client

./: .env.sample  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: add_feature.md
.github/workflows/: codeql.yml  pylint.yml
eew_client/: axis_client.py  data_format.py  eew_client.py  main.py
src/eew_client/: __init__.py  data_format.py  main.py  settings.py  type.py
src/eew_client/axis/: axis_main.py
tests/: test.py  test1.py
