[tool.poetry]
name = "eew-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "eew_client"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
websocket-client = "^1.8.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
